--- a/style.css
+++ b/style.css
@@ -14,4 +14,54 @@ body {
 #map {
   height: 100%;
   width: 100vw;
+  z-index: 10;
+}
+
+#data {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  width: 200px;
+  z-index: 100;
+}
+
+#bottom-sheet {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background-color:rgba(255,255,255,1);
+  transition: transform 0.2s ease-in;
+  transform: translateY(calc(100vh - 70px));
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+#bottom-sheet .title {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  position: sticky;
+  top: 0;
+  background-color: transparent;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #333;
+}
+
+#bottom-sheet.active {
+  transition: transform 0.2s ease-in;
+  transform: translateY(0);
+}
+
+#listing {
+  padding: 1rem;
+}
+
+#bottom-sheet .item.card {
+  width: 100% !important;
+  margin-bottom: 1rem;
 }
