--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   z-index: 100;
   background-color:rgba(255,255,255,1);
   transition: transform 0.2s ease-in;
-  transform: translateY(90%);
+  transform: translateY(100px);
   overflow: auto;
   display: flex;
   flex-direction: column;
