--- a/style.css
+++ b/style.css
@@ -27,17 +27,22 @@ body {
 
 #bottom-sheet {
   position: fixed;
-  bottom: 0;
+  bottom: -80%;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 100;
   background-color:rgba(255,255,255,1);
   transition: transform 0.2s ease-in;
-  transform: translateY(100px);
   overflow: auto;
   display: flex;
   flex-direction: column;
+}
+
+#bottom-sheet.active {
+  transition: transform 0.2s ease-in;
+  transform: translateY(0);
+  bottom: 0;
 }
 
 #bottom-sheet .title {
@@ -50,11 +55,6 @@ body {
   padding: 1rem;
   margin-bottom: 1rem;
   border-bottom: 1px solid #333;
-}
-
-#bottom-sheet.active {
-  transition: transform 0.2s ease-in;
-  transform: translateY(0);
 }
 
 #listing {
