--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   background-color: transparent;
   padding: 1rem;
   margin-bottom: 1rem;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid rgba(33, 33, 33, 0.3);
 }
 
 #bottom-sheet.active {
