--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ body {
   overflow: auto;
   display: flex;
   flex-direction: column;
+  display: none;
+}
+#bottom-sheet.appear {
+  display: block;
 }
 
 #bottom-sheet .title {
@@ -46,7 +50,8 @@ body {
   font-weight: bold;
   position: sticky;
   top: 0;
-  background-color: transparent;
+  z-index: 200;
+  background-color: #fff;
   padding: 1rem;
   margin-bottom: 1rem;
   border-bottom: 1px solid rgba(33, 33, 33, 0.3);
