--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body {
   padding: 0;
 }
 
+#github-ribbon {
+  top: 0;
+  right: 0;
+  position: fixed;
+  z-index: 100;
+}
+
 #map {
   width: 600px;
   height: 400px;
@@ -21,10 +28,11 @@ body {
   background-color: #fff;
   border: 1px solid #333;
   position: fixed;
-  top: 10px;
-  right: 10px;
-  width: 150px;
+  bottom: 30px;
+  right: 0;
+  width: 80%;
   z-index: 100;
+  font-size: 20px;
 }
 
 #bottom-sheet {
