--- a/style.css
+++ b/style.css
@@ -28,11 +28,11 @@ body {
   background-color: #fff;
   border: 1px solid #333;
   position: fixed;
-  bottom: 30px;
-  right: 0;
-  width: 80%;
+  top: 12px;
+  left: 50px;
+  width: 150px;
   z-index: 100;
-  font-size: 20px;
+  font-size: 1rem;
 }
 
 #bottom-sheet {
